[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/CharSelect.gd" type="Script" id=1]
[ext_resource path="res://textures/background.png" type="Texture" id=2]
[ext_resource path="res://scenes/ChararcterCustomisation/Materials.gd" type="Script" id=3]
[ext_resource path="res://GFX/DefaultTheme.tres" type="Theme" id=4]
[ext_resource path="res://default_env.tres" type="Environment" id=5]
[ext_resource path="res://scenes/ChararcterCustomisation/Customiser.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/cart.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/PlayerSelection/player_select_cart.gd" type="Script" id=8]

[node name="CharSelect" type="Spatial"]
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="Materials" type="Node" parent="."]
script = ExtResource( 3 )
_sections_unfolded = [ "Script" ]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.711111, -0.442156, 0.546644, 0.0495086, 0.80706, 0.588391, -0.701335, -0.391347, 0.595799, 4.55809, 2.52881, 1.20406 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 1.0
light_bake_mode = 2
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0.137255, 0.137255, 0.137255, 1 )
shadow_bias = 1.0
shadow_contact = 2.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Shadow" ]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 4 )
alignment = 0
_sections_unfolded = [ "Margin", "Theme", "theme" ]

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 984.0
margin_bottom = 534.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
columns = 2
_sections_unfolded = [ "Margin", "Theme", "custom_constants" ]

[node name="View1" type="VBoxContainer" parent="VBoxContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 490.0
margin_bottom = 265.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/GridContainer/View1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 490.0
margin_bottom = 142.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
stretch_shrink = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Viewport" type="Viewport" parent="VBoxContainer/GridContainer/View1/ViewportContainer"]
arvr = false
size = Vector2( 490, 142 )
own_world = false
world = null
transparent_bg = true
msaa = 0
hdr = true
disable_3d = false
keep_3d_linear = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4

[node name="Camera" type="Camera" parent="VBoxContainer/GridContainer/View1/ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, -1.25 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="WorldEnvironment" type="WorldEnvironment" parent="VBoxContainer/GridContainer/View1/ViewportContainer/Viewport/Camera"]
environment = ExtResource( 5 )
_sections_unfolded = [ "environment" ]

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/GridContainer/View1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 146.0
margin_right = 490.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="Name1" type="LineEdit" parent="VBoxContainer/GridContainer/View1/CenterContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 187.0
margin_right = 303.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Player 1"
secret_character = "*"
expand_to_text_length = true
focus_mode = 2
context_menu_enabled = true
clear_button_enabled = false
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Customiser1" parent="VBoxContainer/GridContainer/View1" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 174.0
margin_right = 490.0
margin_bottom = 265.0

[node name="CartMaterialContainer" parent="VBoxContainer/GridContainer/View1/Customiser1" index="0"]
editor/display_folded = true
margin_left = 115.0
margin_top = 0.0
margin_right = 375.0
margin_bottom = 91.0

[node name="View2" type="VBoxContainer" parent="VBoxContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 494.0
margin_right = 984.0
margin_bottom = 265.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Margin", "Size Flags" ]

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/GridContainer/View2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 490.0
margin_bottom = 142.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
stretch_shrink = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Viewport" type="Viewport" parent="VBoxContainer/GridContainer/View2/ViewportContainer"]
arvr = false
size = Vector2( 490, 142 )
own_world = false
world = null
transparent_bg = true
msaa = 0
hdr = true
disable_3d = false
keep_3d_linear = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4

[node name="Camera" type="Camera" parent="VBoxContainer/GridContainer/View2/ViewportContainer/Viewport"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.75, 0.25, 2 )
keep_aspect = 1
cull_mask = 1048575
environment = ExtResource( 5 )
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/GridContainer/View2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 146.0
margin_right = 490.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="Name2" type="LineEdit" parent="VBoxContainer/GridContainer/View2/CenterContainer2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 185.0
margin_right = 305.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Player 2"
secret_character = "*"
expand_to_text_length = true
focus_mode = 2
context_menu_enabled = true
clear_button_enabled = false
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Customiser2" parent="VBoxContainer/GridContainer/View2" instance=ExtResource( 6 )]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 174.0
margin_right = 490.0
margin_bottom = 265.0

[node name="CartMaterialContainer" parent="VBoxContainer/GridContainer/View2/Customiser2" index="0"]
margin_left = 115.0
margin_top = 0.0
margin_right = 375.0
margin_bottom = 91.0

[node name="View3" type="VBoxContainer" parent="VBoxContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 269.0
margin_right = 490.0
margin_bottom = 534.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/GridContainer/View3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 490.0
margin_bottom = 142.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
stretch_shrink = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Viewport" type="Viewport" parent="VBoxContainer/GridContainer/View3/ViewportContainer"]
arvr = false
size = Vector2( 490, 142 )
own_world = false
world = null
transparent_bg = true
msaa = 0
hdr = true
disable_3d = false
keep_3d_linear = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4

[node name="Camera" type="Camera" parent="VBoxContainer/GridContainer/View3/ViewportContainer/Viewport"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.25, 4.72 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer/GridContainer/View3"]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 146.0
margin_right = 490.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="Name3" type="LineEdit" parent="VBoxContainer/GridContainer/View3/CenterContainer3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 185.0
margin_right = 305.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Player 3"
secret_character = "*"
expand_to_text_length = true
focus_mode = 2
context_menu_enabled = true
clear_button_enabled = false
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Customiser3" parent="VBoxContainer/GridContainer/View3" instance=ExtResource( 6 )]
editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 174.0
margin_right = 490.0
margin_bottom = 265.0

[node name="CartMaterialContainer" parent="VBoxContainer/GridContainer/View3/Customiser3" index="0"]
margin_left = 115.0
margin_top = 0.0
margin_right = 375.0
margin_bottom = 91.0

[node name="View4" type="VBoxContainer" parent="VBoxContainer/GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 494.0
margin_top = 269.0
margin_right = 984.0
margin_bottom = 534.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/GridContainer/View4"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 490.0
margin_bottom = 142.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
stretch_shrink = 1
_sections_unfolded = [ "Size Flags" ]

[node name="Viewport" type="Viewport" parent="VBoxContainer/GridContainer/View4/ViewportContainer"]
arvr = false
size = Vector2( 490, 142 )
own_world = false
world = null
transparent_bg = true
msaa = 0
hdr = true
disable_3d = false
keep_3d_linear = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 3
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4

[node name="Camera" type="Camera" parent="VBoxContainer/GridContainer/View4/ViewportContainer/Viewport"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.75, 0.25, 2 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="CenterContainer4" type="CenterContainer" parent="VBoxContainer/GridContainer/View4"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 146.0
margin_right = 490.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="Name4" type="LineEdit" parent="VBoxContainer/GridContainer/View4/CenterContainer4"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 185.0
margin_right = 305.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Player 4"
secret_character = "*"
expand_to_text_length = true
focus_mode = 2
context_menu_enabled = true
clear_button_enabled = false
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Customiser4" parent="VBoxContainer/GridContainer/View4" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 174.0
margin_right = 490.0
margin_bottom = 265.0

[node name="CartMaterialContainer" parent="VBoxContainer/GridContainer/View4/Customiser4" index="0"]
margin_left = 115.0
margin_top = 0.0
margin_right = 375.0
margin_bottom = 91.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 538.0
margin_right = 984.0
margin_bottom = 560.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Anchor", "Margin", "Size Flags" ]

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 319.0
margin_right = 664.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Back" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 177.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Pick Racers"
flat = false
align = 1

[node name="Begin" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 181.0
margin_right = 345.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Pick Track"
flat = false
align = 1

[node name="Carts" type="Node" parent="."]

[node name="Cart1" parent="Carts" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )
gravity_scale = 0.0
script = ExtResource( 8 )
_sections_unfolded = [ "Axis Lock", "Collision", "Motion", "Script", "Transform" ]
rotation_speed = 1

[node name="Cart2" parent="Carts" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 2 )
gravity_scale = 0.0
script = ExtResource( 8 )
_sections_unfolded = [ "Axis Lock", "Collision", "Motion", "Script", "Transform" ]
rotation_speed = 1

[node name="Cart3" parent="Carts" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.5 )
gravity_scale = 0.0
script = ExtResource( 8 )
_sections_unfolded = [ "Axis Lock", "Collision", "Motion", "Script", "Transform" ]
rotation_speed = 1

[node name="Cart4" parent="Carts" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 2 )
gravity_scale = 0.0
script = ExtResource( 8 )
_sections_unfolded = [ "Axis Lock", "Collision", "Motion", "Script", "Transform" ]
rotation_speed = 1

[connection signal="pressed" from="VBoxContainer/GridContainer/View1/Customiser1/CartMaterialContainer/DecalButtonLeft" to="." method="_on_DecalButtonLeft_pressed" binds= [ 1 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View1/Customiser1/CartMaterialContainer/DecalButtonRight" to="." method="_on_DecalButtonRight_pressed" binds= [ 1 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View1/Customiser1/CartMaterialContainer/CartButtonLeft" to="." method="_on_CartButtonLeft_pressed" binds= [ 1 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View1/Customiser1/CartMaterialContainer/CartButtonRight" to="." method="_on_CartButtonRight_pressed" binds= [ 1 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View1/Customiser1/CartMaterialContainer/SuitButtonLeft" to="." method="_on_SuitButtonLeft_pressed" binds= [ 1 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View1/Customiser1/CartMaterialContainer/SuitButtonRight" to="." method="_on_SuitButtonRight_pressed" binds= [ 1 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View1/Customiser1/CartMaterialContainer/Randomise" to="." method="_on_Randomise_pressed" binds= [ 1 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View2/Customiser2/CartMaterialContainer/DecalButtonLeft" to="." method="_on_DecalButtonLeft_pressed" binds= [ 2 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View2/Customiser2/CartMaterialContainer/DecalButtonRight" to="." method="_on_DecalButtonRight_pressed" binds= [ 2 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View2/Customiser2/CartMaterialContainer/CartButtonLeft" to="." method="_on_CartButtonLeft_pressed" binds= [ 2 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View2/Customiser2/CartMaterialContainer/CartButtonRight" to="." method="_on_CartButtonRight_pressed" binds= [ 2 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View2/Customiser2/CartMaterialContainer/SuitButtonLeft" to="." method="_on_SuitButtonLeft_pressed" binds= [ 2 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View2/Customiser2/CartMaterialContainer/SuitButtonRight" to="." method="_on_SuitButtonRight_pressed" binds= [ 2 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View2/Customiser2/CartMaterialContainer/Randomise" to="." method="_on_Randomise_pressed" binds= [ 2 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View3/Customiser3/CartMaterialContainer/DecalButtonLeft" to="." method="_on_DecalButtonLeft_pressed" binds= [ 3 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View3/Customiser3/CartMaterialContainer/DecalButtonRight" to="." method="_on_DecalButtonRight_pressed" binds= [ 3 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View3/Customiser3/CartMaterialContainer/CartButtonLeft" to="." method="_on_CartButtonLeft_pressed" binds= [ 3 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View3/Customiser3/CartMaterialContainer/CartButtonRight" to="." method="_on_CartButtonRight_pressed" binds= [ 3 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View3/Customiser3/CartMaterialContainer/SuitButtonLeft" to="." method="_on_SuitButtonLeft_pressed" binds= [ 3 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View3/Customiser3/CartMaterialContainer/SuitButtonRight" to="." method="_on_SuitButtonRight_pressed" binds= [ 3 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View3/Customiser3/CartMaterialContainer/Randomise" to="." method="_on_Randomise_pressed" binds= [ 3 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View4/Customiser4/CartMaterialContainer/DecalButtonLeft" to="." method="_on_DecalButtonLeft_pressed" binds= [ 4 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View4/Customiser4/CartMaterialContainer/DecalButtonRight" to="." method="_on_DecalButtonRight_pressed" binds= [ 4 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View4/Customiser4/CartMaterialContainer/CartButtonLeft" to="." method="_on_CartButtonLeft_pressed" binds= [ 4 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View4/Customiser4/CartMaterialContainer/CartButtonRight" to="." method="_on_CartButtonRight_pressed" binds= [ 4 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View4/Customiser4/CartMaterialContainer/SuitButtonLeft" to="." method="_on_SuitButtonLeft_pressed" binds= [ 4 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View4/Customiser4/CartMaterialContainer/SuitButtonRight" to="." method="_on_SuitButtonRight_pressed" binds= [ 4 ]]
[connection signal="pressed" from="VBoxContainer/GridContainer/View4/Customiser4/CartMaterialContainer/Randomise" to="." method="_on_Randomise_pressed" binds= [ 4 ]]
[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer/HBoxContainer/Begin" to="." method="_on_Begin_pressed"]

[editable path="VBoxContainer/GridContainer/View1/Customiser1"]

[editable path="VBoxContainer/GridContainer/View2/Customiser2"]

[editable path="VBoxContainer/GridContainer/View3/Customiser3"]

[editable path="VBoxContainer/GridContainer/View4/Customiser4"]
